--- a/digital_business_card/src/App.css
+++ b/digital_business_card/src/App.css
@@ -1,18 +1,16 @@
 body {
-    background-color: #1a1a1a;
+    background-color: #333;
 
     font-family: 'Lucida Grande', sans-serif ;
 }
 
 .app {
-    background-color: #333;
+    background-color: #1f1f1f;
 
     margin: auto;
     max-width: 600px;
 
     border-radius: 10px;
-
-    padding-bottom: 10px;
 }
 
 header {
@@ -98,9 +96,13 @@ header {
 }
 
 footer {
+    background-color: #111;
+
     padding-top: 10px;
+    padding-bottom: 10px;
 
     border-top: solid;
+    border-radius: 0px 0px 10px 10px;
     color: #666;
     font-size: 12px;
 
