--- a/airbnb/src/App.css
+++ b/airbnb/src/App.css
@@ -58,9 +58,13 @@ header > img{
 }
 
 .rectHor {
-    background-color: red;
     display: flex;
     align-items: center;
+
+    height: 600px;
+    width: 100%;
+
+    justify-content: center;
 }
 
 .rectVer {
@@ -69,8 +73,8 @@ header > img{
 }
 
 .rectVer > * {
-    background-color: blue;
-    height: 50px;
-    width: 50px;
+    height: auto;
+    width: 60px;
     margin: 10px;
+    box-shadow: 0px 10px 7px #696969;
 }
