--- a/travel_journal/src/App.css
+++ b/travel_journal/src/App.css
@@ -42,11 +42,37 @@ main {
   padding: 30px;
 }
 
-.card {
+.main--cards_data {
+  overflow: auto;
+
+  max-height: 600px;
+}
+
+.main--cards_data::-webkit-scrollbar {
+  width: 5px;
+}
+
+.main--cards_data::-webkit-scrollbar-track {
+  border-radius: 5px;
+  -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.3); 
+}
+
+.main--cards_data::-webkit-scrollbar-thumb {
+  border-radius: 10px;
+  -webkit-box-shadow: inset 0 0 6px indianred; 
+}
+
+
+.main--cards_data > .card {
   display: flex;
 
   max-height: 150px;
 }
+
+.main--cards_data > .card ~ .card {
+  margin-top: 10px;
+}
+
 
 .card--img {
   height: 150px;
@@ -128,5 +154,17 @@ main {
 
 .card--about::-webkit-scrollbar-thumb {
    border-radius: 10px;
-   -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.5); 
+   -webkit-box-shadow: inset 0 0 6px indianred; 
+}
+
+footer {
+  margin-top: 10px;
+  text-align: center;
+
+  color: indianred;
+
+  border-top: solid;
+  border-width: 1px;
+  border-color: indianred;
+
 }
