--- a/meme_generator/src/App.css
+++ b/meme_generator/src/App.css
@@ -7,11 +7,15 @@ body {
   max-width: 600px;
   margin: auto;
 
-  font-family: 'Lucida Grande', sans-serif;
+  font-family: "Lucida Grande", sans-serif;
 }
 
 header {
-  background-image: linear-gradient(to bottom right, rgb(58, 32, 58), rgb(104, 59, 104));
+  background-image: linear-gradient(
+    to bottom right,
+    rgb(58, 32, 58),
+    rgb(104, 59, 104)
+  );
 
   display: flex;
   align-items: center;
@@ -22,7 +26,7 @@ header {
 }
 
 .header--logo_container {
-  display:  flex;
+  display: flex;
   align-items: center;
 }
 
@@ -34,7 +38,7 @@ header {
   margin: 0px;
   margin-left: 10px;
 
-  color: azure
+  color: azure;
 }
 
 .header--project {
@@ -51,30 +55,35 @@ main {
 
 .main--form {
   display: grid;
-  grid-template-areas: 'in1 in2' 'b1 b1';
+  grid-template-areas: "in1 in2" "b1 b1";
   gap: 10px;
 }
 
 .main--input {
   text-indent: 5px;
 
-  border: 2px solid #666;
+  border: 2px solid rgb(110, 60, 110);
+  outline-color: rgb(60, 30, 60);
+
   border-radius: 5px;
 }
 
 .main--input:first-child {
   grid-area: in1;
-
 }
 
-.main--input:nth-child(2){
+.main--input:nth-child(2) {
   grid-area: in2;
 }
 
 .main--button {
   grid-area: b1;
 
-  background-image: linear-gradient(to bottom right, rgb(60, 30, 60), rgb(110, 60, 110));
+  background-image: linear-gradient(
+    to bottom right,
+    rgb(60, 30, 60),
+    rgb(110, 60, 110)
+  );
   color: azure;
 
   padding: 5px;
@@ -86,12 +95,30 @@ main {
 }
 
 .main--button:hover {
-  background-image: linear-gradient(to bottom right, rgb(60, 30, 60), rgb(140, 90, 140));
+  background-image: linear-gradient(
+    to bottom right,
+    rgb(60, 30, 60),
+    rgb(140, 90, 140)
+  );
 }
 
-.main--image {
+.main--imageContainer {
+  position: relative;
+}
+
+.imageContainer--image {
   margin: auto;
   margin-top: 10px;
 
-  width: 100%; 
+  width: 100%;
+}
+
+.imageContainer--fav_icon {
+  position: absolute;
+  right: 10px;
+  top: 20px;
+
+  width: 20px;
+
+  filter: drop-shadow(0px 0px 2px white);
 }
