--- a/meme_generator/src/App.css
+++ b/meme_generator/src/App.css
@@ -134,16 +134,26 @@ main {
 }
 
 .box {
-  /* background-image: linear-gradient( 
-    to bottom right,
-    rgb(58, 32, 58),
-    rgb(104, 59, 104)
-  );*/
-
   margin-left: 5px;
 
   width: 100%;
   height: 50px;
+}
+
+#box_on {
+  background-image: linear-gradient( 
+    to bottom right,
+    rgb(32, 58, 36),
+    rgb(59, 104, 65)
+  );
+}
+
+#box_off {
+  background-image: linear-gradient( 
+    to bottom right,
+    rgb(58, 32, 58),
+    rgb(104, 59, 104)
+  );
 }
 
 .box:first-child {
