--- a/meme_generator/src/App.css
+++ b/meme_generator/src/App.css
@@ -138,10 +138,16 @@ main {
 
   width: 100%;
   height: 50px;
+
+  filter: brightness(85%);
+}
+
+.box:hover {
+  filter: brightness(100%);
 }
 
 #box_on {
-  background-image: linear-gradient( 
+  background-image: linear-gradient(
     to bottom right,
     rgb(32, 58, 36),
     rgb(59, 104, 65)
@@ -149,7 +155,7 @@ main {
 }
 
 #box_off {
-  background-image: linear-gradient( 
+  background-image: linear-gradient(
     to bottom right,
     rgb(58, 32, 58),
     rgb(104, 59, 104)
@@ -160,4 +166,22 @@ main {
   margin-left: 0px;
 }
 
+#add_box {
+  background-image: linear-gradient(
+    to bottom right,
+    rgb(32, 58, 36),
+    rgb(59, 104, 65)
+  );
 
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.box--add_icon {
+  width: 80%;
+  height: 80%;
+  object-fit: contain;
+
+  opacity: 50%;
+}
