--- a/meme_generator/src/App.css
+++ b/meme_generator/src/App.css
@@ -124,6 +124,8 @@ main {
 
   width: 20px;
 
+  cursor: pointer;
+
   filter: drop-shadow(0px 0px 2px white);
 }
 
@@ -139,11 +141,34 @@ main {
   width: 100%;
   height: 50px;
 
+  position: relative;
+
+  border-radius: 5px;
+
   filter: brightness(85%);
+}
+
+.box--del_icon_def {
+  position: absolute;
+  right: 4px;
+  top: 4px;
+
+  opacity: 50%;
+
+  width: 10px;
+}
+
+.box--del_icon_red {
+  position: absolute;
+  right: 4px;
+  top: 4px;
+
+  width: 10px;
 }
 
 .box:hover {
   filter: brightness(100%);
+  cursor: pointer;
 }
 
 #box_on {
