--- a/meme_generator/src/App.css
+++ b/meme_generator/src/App.css
@@ -141,6 +141,12 @@ main {
   width: 100%;
   height: 50px;
 
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  font-size: 20px;
+  color: azure;
+
   position: relative;
 
   border-radius: 5px;
