--- a/drag_en_drop/src/App.css
+++ b/drag_en_drop/src/App.css
@@ -18,13 +18,18 @@ body {
 }
 
 .dragendrop {
+  position: absolute;
+  border: solid 3px black;
+}
+
+#Elem1 {
   width: 50px;
   height: 50px;
-  background-color: red;
+  background-color: red; 
+}
 
-  left: 0px;
-
-  position: absolute;
-
-  border: solid 3px black;
+#Elem2 {
+  width: 50px;
+  height: 50px;
+  background-color: green; 
 }
