--- a/meme_generator/src/components/SignUpForm.css
+++ b/meme_generator/src/components/SignUpForm.css
@@ -46,6 +46,14 @@
   border-radius: 3px;
   border: 0px;
   margin-top: 10px;
-
+  
   color: azure;
+}
+
+.signUpForm--submit > button:hover {
+  background-image: linear-gradient(
+    to bottom right,
+    rgb(50, 100, 120),
+    rgb(25, 50, 60)
+  );
 }
